# SimpleFramework

./: .gitignore  README.md  pyproject.toml
framework/: application.py  request.py  response.py  router.py  session.py  sessionrepository.py  state.py
framework/database/: base.py  pool.py  postgresql.py  sqlite3.py
framework/httpexceptions/: httpbadrequestexception.py  httpforbiddenexception.py  httpnotfoundexception.py
framework/util/: acceptcontainer.py  cookiedict.py  multidict.py
